# gnn3

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.beads/: issues.jsonl
reports/: adaptive_halting_round9.md  branchwise_max_ablation_round13.md  candidate_prototype_defer_experiment.md  committee_defer_round12.md  compute_helpfulness_round10.md  conservative_student_round13.md  continuation_audit.md  continuation_audit_round10.md  continuation_audit_round11.md  continuation_audit_round12.md  continuation_audit_round13.md  continuation_audit_round3.md  continuation_audit_round4.md  continuation_audit_round6.md  continuation_audit_round7.md  continuation_audit_round8.md  continuation_audit_round9.md  continuation_report_round10.md  continuation_report_round11.md  continuation_report_round12.md  continuation_report_round13.md  continuation_report_round2.md  continuation_report_round3.md  continuation_report_round4.md  continuation_report_round5.md  continuation_report_round6.md  continuation_report_round7.md  continuation_report_round8.md  continuation_report_round9.md  counterfactual_critic_round8.md  counterfactual_dataset_round8.md  defer_gate_round11.md  delay_mailbox_round9.md  deployment_study_round11.md  deployment_study_round12.md  deployment_study_round13.md  e3_repro_audit_round3.md  frontier_guard_round9.md  frontier_pack_round9.md  hard_feasible_action_gap_round7.md  (+120 more)
requirements/: torch-nightly-cu130.txt
scripts/: bootstrap_env.sh  clone_reference_repos.sh  fetch_references.py  plot_experiment_summaries.py  plot_round4_results.py  plot_round5_results.py  (+137 more)
(+675 files in other folders)
